Implement LED control functionality in CH340 multi-display script. Added methods to start and stop LED sequences, including support for keyboard LEDs. Updated Dockerfile to include x11-xkb-utils and modified docker-compose.yml to allow access to LED devices.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - /run/user/1000/xauth_FCIpPa:/tmp/xauth:ro
       - ./ch340-welcome.jpg:/app/ch340-welcome.jpg:ro
       - /tmp/ch340-multi-display.log:/tmp/ch340-multi-display.log
+      - /sys/class/leds:/sys/class/leds:rw
     network_mode: host
     restart: unless-stopped
     stdin_open: true
